# mediaocean-cc

./: .gitignore  README.md  docker-compose.yml  migratedb.sh  sample.env
backend/: Dockerfile  alembic.ini  lint.sh  logger.conf  manage.py  pyproject.toml  pytest.errors  setup.cfg
backend/app/: __init__.py
backend/app/api/responses/: __init__.py
backend/app/api/schemas/: __init__.py
backend/app/api/v1/: __init__.py  anomaly.py  post.py  summary.py  user.py
backend/app/bizlogic/: __init__.py  anomaly.py  post.py  summary.py
backend/app/bizlogic/errors/: __init__.py
backend/app/database/: engine.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 1c70cc3d28e1_removed_anomalies_and_cleaned_models.py  bb4c59c2baba_initial_tables.py
backend/app/database/models/: __init__.py
backend/tests/: test_basic.py  test_ui.py
frontend/: next.config.ts  package-lock.json  package.json  theme.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: Anomalies.tsx  SummaryComponent.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: Footer.tsx
frontend/src/components/header/: Header.tsx
frontend/src/components/landing/: heroSection.tsx  styling.tsx
